[fix] jpackageで作成したexeが起動しない問題の修正
#ref 1 うどんべいのパスタ退治.exeが起動しない問題を修正しました。